monitoring/thanos/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "thanos.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: thanos-query
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-bucket
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "thanos-bucket.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: thanos-bucketweb
          port: 8080
