monitoring/thanos/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thanos-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
    - from: []
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 10901
        - protocol: TCP
          port: 8080
  egress:
    - {} # Allow all egress
